--- a/index.html
+++ b/index.html
@@ -1,248 +1,111 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#007bff">
-    <meta name="description" content="Um quiz interativo e divertido.">
-    <title>jsonQuiz</title>
+    <title>OpenQuiz Apresentador</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
-    <link rel="shortcut icon" href="favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="favicon/site.webmanifest" />
-
-    <!-- Registro do Service Worker -->
-    <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
-                    .then(registration => {
-                        console.log('Service Worker registrado com sucesso:', registration);
-                    })
-                    .catch(error => {
-                        console.log('Falha ao registrar Service Worker:', error);
-                    });
-            });
-        }
-    </script>
-
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 
-<body class="container mt-4">
-    <!-- Seletor de Modo -->
-    <div id="modeSelector" class="card">
-        <div class="card-body text-center py-5">
-            <div class="d-flex align-items-center justify-content-center mb-4">
-                <img src="logo.svg" alt="Logo do Quiz" style="height: 40px;" class="me-3">
-                <h1>jsonQUIZ</h1>
-                <p class="m-3">v1.1.3</p>
+<body class="bg-body-tertiary">
+    <header class="fixed-top bg-body-secondary p-2 shadow">
+        <h1 class="fw-bolder">
+            <i class="bi bi-mortarboard"></i>
+            OpenQuiz
+        </h1>
+    </header>
+
+    <main class="container py-5 my-5">
+        <section id="screen-setup" class="p-4 shadow">
+            <h1 class="text-center">Configurações do jogo</h1>
+            <hr>
+            <div class="mb-4">
+                <label class="form-label fw-bold small text-muted">
+                    1. Adicionar arquivo de perguntas (<code>.txt</code>)
+                </label>
+                <input type="file" id="file-upload" class="form-control" accept=".txt">
+                <div id="file-info" class="form-text mt-2"></div>
+            </div>
+            <div class="mb-4">
+                <label class="form-label fw-bold small text-muted">
+                    2. Adicionar nome dos jogadores
+                </label>
+                <div class="row g-2 mt-2 mb-4">
+                    <div class="col">
+                        <button id="btn-add" class="btn btn-secondary w-100 btn-sm">
+                            <i class="bi bi-plus-lg"></i>
+                        </button>
+                    </div>
+                    <div class="col">
+                        <button id="btn-remove" class="btn btn-danger w-100 btn-sm">
+                            <i class="bi bi-dash-lg"></i>
+                        </button>
+                    </div>
+                </div>
+                <div id="players-container" class="d-grid gap-2"></div>
+            </div>
+            <button id="btn-start" class="btn btn-success w-100 py-3 fw-bold shadow" disabled>
+                INICIAR!
+            </button>
+        </section>
+
+        <section id="screen-game" class="d-none">
+            <div class="d-flex justify-content-between align-items-center mb-3">
+                <button id="btn-quit" class="btn btn-sm btn-outline-danger fw-bolder">
+                    <i class="bi bi-x"></i>
+                    Sair
+                </button>
+                <button id="turn">
+                    Jogador 1
+                </button>
+                <button class="btn btn-sm btn-outline-warning fw-bolder">
+                    <i class="bi bi-clock"></i>
+                    <span id="timer-display">15</span>
+                </button>
             </div>
 
-            <div class="row g-3">
-                <div class="col-md-6">
-                    <button id="singlePlayerBtn" class="btn btn-primary w-100 py-4">
-                        <div>
-                            <h3>🧑 Modo Individual</h3>
-                            <p class="mb-0">Jogue sozinho contra o tempo</p>
-                        </div>
-                    </button>
-                </div>
-                <div class="col-md-6">
-                    <button id="multiPlayerBtn" class="btn btn-success w-100 py-4">
-                        <div>
-                            <h3>👥 Multiplayer Local</h3>
-                            <p class="mb-0">2-6 jogadores no mesmo dispositivo</p>
-                        </div>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <!-- Modo Individual (ATUALIZADO) -->
-<div id="singlePlayerMode" class="d-none">
-    <div class="card">
-        <div class="card-body">
-            <button class="btn btn-outline-secondary mb-3" onclick="backToModeSelector()">
-                ← Voltar
+            <div class="text-center py-4 mb-3 shadow">
+                <h4 id="question-text" class="fw-bold m-0">Pergunta?</h4>
+            </div>
+
+            <button id="btn-release-timer" class="btn btn-outline-warning w-100 py-2 fw-bold mb-3">
+                <i class="bi bi-stopwatch-fill"></i>
+                VALENDO!
             </button>
 
-            <div class="d-flex align-items-center mb-4">
-                <img src="logo.svg" alt="Logo do Quiz" style="height: 40px;" class="me-3">
-                <h1>jsonQUIZ</h1>
-                <p class="m-3">Individual</p>
-            </div>
+            <div id="options-area" class="d-grid gap-3 blocked-area shadow p-3"></div>
 
-            <!-- Carregar Perguntas -->
-            <div id="uploadArea">
-                <input type="file" id="questionsFile" class="form-control mb-3" accept=".json">
-                <button class="btn btn-primary w-100" onclick="startSingleGame()" id="playButton"
-                    disabled>Jogar</button>
-            </div>
+            <button id="btn-next" class="btn btn-secondary w-100 mt-3 py-3 fw-bold d-none">
+                Próxima
+                <i class="bi bi-arrow-right"></i>
+            </button>
 
-            <!-- Área do Jogo -->
-            <div id="gameArea" class="d-none">
-                <!-- PONTUAÇÃO -->
-                <div id="scoreDisplay" class="alert alert-info text-center mb-3">🏅 Pontuação: 0</div>
+            <div id="feedback-area" class="mt-3"></div>
 
-                <!-- TIMER -->
-                <div id="timerDisplay" class="text-center display-6 fw-bold text-primary mb-3">30</div>
+        </section>
 
-                <!-- PERGUNTA -->
-                <h2 id="question" class="mb-3"></h2>
+        <section id="screen-result" class="d-none text-center mt-5">
+            <i class="bi bi-trophy-fill text-warning display-1"></i>
+            <h1 class="fw-bold mt-3 mb-4">Placar Final</h1>
+            <hr>
+            <div id="winner-alert" class="alert alert-success d-inline-block fw-bold px-4 mb-4"></div>
+            <ul id="final-list" class="list-group text-start mb-4 shadow-sm"></ul>
+            <button id="btn-menu" class="btn btn-outline-secondary w-100">Voltar ao Início</button>
+        </section>
+    </main>
 
-                <!-- ALTERNATIVAS -->
-                <div id="alternatives" class="list-group mb-3"></div>
-
-                <!-- FEEDBACK -->
-                <div id="feedback" class="alert mb-3 d-none"></div>
-
-                <!-- REFERÊNCIA -->
-                <div id="reference" class="alert alert-info mb-3 d-none"></div>
-
-                <!-- PRÓXIMA -->
-                <button class="btn btn-success w-100" onclick="nextQuestion()" id="nextButton" disabled>Próxima</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-    <!-- Modo Multiplayer -->
-    <div id="multiPlayerMode" class="d-none">
-        <!-- Setup do Multiplayer -->
-        <div id="multiSetup" class="card">
-            <div class="card-body">
-                <button class="btn btn-outline-secondary mb-3" onclick="backToModeSelector()">
-                    ← Voltar
-                </button>
-
-                <div class="d-flex align-items-center mb-4">
-                    <img src="logo.svg" alt="Logo do Quiz" style="height: 40px;" class="me-3">
-                    <h1>Multiplayer Local</h1>
-                </div>
-
-                <!-- Carregar Perguntas -->
-                <div class="mb-4">
-                    <label for="multiQuestionsFile" class="form-label">Importar Perguntas (JSON)</label>
-                    <input type="file" id="multiQuestionsFile" class="form-control" accept=".json">
-                </div>
-
-                <!-- Configuração dos Jogadores -->
-                <div id="playersSetup">
-                    <h4 class="mb-3">Configurar Jogadores</h4>
-                    <div id="playersContainer"></div>
-
-                    <div class="row g-2 mb-3">
-                        <div class="col">
-                            <button id="addPlayerBtn" class="btn btn-outline-primary w-100">
-                                ➕ Adicionar Jogador
-                            </button>
-                        </div>
-                        <div class="col">
-                            <button id="removePlayerBtn" class="btn btn-outline-danger w-100">
-                                ➖ Remover Jogador
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <button id="startMultiBtn" class="btn btn-success w-100 btn-lg" disabled>
-                    🚀 Iniciar Jogo Multiplayer
-                </button>
-            </div>
-        </div>
-
-        <!-- Jogo Multiplayer -->
-        <div id="multiGame" class="card d-none">
-            <div class="card-body">
-                <button class="btn btn-outline-secondary mb-3" onclick="backToMultiSetup()">
-                    ← Configurações
-                </button>
-
-                <!-- Placar -->
-                <div id="scoreboard" class="mb-3"></div>
-
-                <!-- Barra de Progresso -->
-                <div class="progress mb-3">
-                    <div class="progress-bar" id="progressFill" role="progressbar" style="width: 0%"></div>
-                </div>
-
-                <!-- Jogador Atual -->
-                <div id="currentPlayerDisplay" class="alert text-center fw-bold mb-3"></div>
-
-                <!-- Timer -->
-                <div id="multiTimerDisplay" class="text-center display-4 fw-bold text-primary mb-3">15</div>
-
-                <!-- Pergunta -->
-                <h3 id="multiQuestion" class="mb-3"></h3>
-                <div id="multiAlternatives" class="list-group mb-3"></div>
-
-                <!-- Botão "Próxima" -->
-                <button id="nextMultiButton" class="btn btn-success w-100 d-none mt-3">Próxima</button>
-
-            </div>
-        </div>
-
-        <!-- Resultados -->
-        <div id="multiResults" class="card d-none">
-            <div class="card-body text-center">
-                <h2 class="mb-4">🏆 Resultado Final</h2>
-                <div id="finalScoreboard" class="mb-4"></div>
-                <div id="winnerAnnouncement" class="alert alert-success mb-4"></div>
-
-                <div class="row g-2">
-                    <div class="col">
-                        <button id="playAgainBtn" class="btn btn-success w-100">
-                            🔄 Jogar Novamente
-                        </button>
-                    </div>
-                    <div class="col">
-                        <button id="newMultiGameBtn" class="btn btn-primary w-100">
-                            👥 Nova Configuração
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <footer class="container text-center bg-dark text-light py-5 mt-5">
-        <p class="mb-2">Baixe as perguntas 
-            <a href="https://github.com/samuelsantanaoficial/jsonquiz/releases/latest" target="_blank" class="text-info">aqui</a>
-        </p>
-        <ul class="list-inline">
-            <li class="list-inline-item">
-                <a href="https://github.com/samuelsantanaoficial/jsonquiz" target="_blank" class="text-info">GitHub</a>
-            </li>
-            <li class="list-inline-item">
-                <a href="https://br.freepik.com/" target="_blank" class="text-info">Freepik</a>
-            </li>
-            <li class="list-inline-item">
-                <a href="https://getbootstrap.com/" target="_blank" class="text-info">Bootstrap</a>
-            </li>
-            <li class="list-inline-item">
-                <a href="https://realfavicongenerator.net/" target="_blank" class="text-info">Favicon Generator</a>
-            </li>
-        </ul>
+    <footer id="footer-score" class="fixed-bottom bg-body-secondary p-2">
+        <div id="mini-scoreboard" class="container py-2"></div>
     </footer>
 
-    <!-- Áudios -->
-    <audio id="audioSuccess" src="audio/success.wav"></audio>
-    <audio id="audioError" src="audio/error.wav"></audio>
-    <audio id="audioTimer" src="audio/timer.wav" loop></audio>
+    <audio id="snd-clock" src="./audio/clock.wav" loop></audio>
+    <audio id="snd-success" src="./audio/success.wav"></audio>
+    <audio id="snd-error" src="./audio/error.wav"></audio>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <script src="script/singleplayer.js"></script>
-    <script src="script/multiplayer.js"></script>
-    <script src="script/main.js"></script>
-
+    <script src="app.js"></script>
 </body>
 
 </html>
