--- a/index.html
+++ b/index.html
@@ -2,110 +2,126 @@
 <html lang="pt-br" data-bs-theme="dark">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OpenQuiz Apresentador</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>OpenQuiz Apresentador</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+	<script>
+		if ('serviceWorker' in navigator) {
+			window.addEventListener('load', () => {
+				navigator.serviceWorker.register('./sw.js')
+					.then(() => console.log('App pronto para uso Offline!'))
+					.catch((err) => console.log('Erro no SW:', err));
+			});
+		}
+	</script>
+	<link rel="manifest" href="./manifest.json">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="default">
+	<meta name="apple-mobile-web-app-title" content="OpenCifras">
+	<meta name="theme-color" content="#e9ecef"> <!-- .bg-body-secondary (dark = #343a40 light = #e9ecef) -->
+	<link rel="apple-touch-icon" href="maskable_icon_x512.png">
 </head>
 
 <body class="bg-body-tertiary">
-    <header class="fixed-top bg-body-secondary p-2 shadow">
-        <h1 class="fw-bolder">
-            <i class="bi bi-mortarboard"></i>
-            OpenQuiz
-        </h1>
-    </header>
+	<header class="fixed-top bg-body-secondary p-2 shadow">
+		<h1 class="fw-bolder">
+			<i class="bi bi-mortarboard"></i>
+			OpenQuiz
+		</h1>
+	</header>
 
-    <main class="container py-5 my-5">
-        <section id="screen-setup" class="p-4 shadow">
-            <h1 class="text-center">Configurações do jogo</h1>
-            <hr>
-            <div class="mb-4">
-                <label class="form-label fw-bold small text-muted">
-                    1. Adicionar arquivo de perguntas (<code>.txt</code>)
-                </label>
-                <input type="file" id="file-upload" class="form-control" accept=".txt">
-                <div id="file-info" class="form-text mt-2"></div>
-            </div>
-            <div class="mb-4">
-                <label class="form-label fw-bold small text-muted">
-                    2. Adicionar nome dos jogadores
-                </label>
-                <div class="row g-2 mt-2 mb-4">
-                    <div class="col">
-                        <button id="btn-add" class="btn btn-secondary w-100 btn-sm">
-                            <i class="bi bi-plus-lg"></i>
-                        </button>
-                    </div>
-                    <div class="col">
-                        <button id="btn-remove" class="btn btn-danger w-100 btn-sm">
-                            <i class="bi bi-dash-lg"></i>
-                        </button>
-                    </div>
-                </div>
-                <div id="players-container" class="d-grid gap-2"></div>
-            </div>
-            <button id="btn-start" class="btn btn-success w-100 py-3 fw-bold shadow" disabled>
-                INICIAR!
-            </button>
-        </section>
+	<main class="container py-5 my-5">
+		<section id="screen-setup" class="p-4 shadow">
+			<h1 class="text-center">Configurações do jogo</h1>
+			<hr>
+			<div class="mb-4">
+				<label class="form-label fw-bold small text-muted">
+					1. Adicionar arquivo de perguntas (<code>.txt</code>)
+				</label>
+				<input type="file" id="file-upload" class="form-control" accept=".txt">
+				<div id="file-info" class="form-text mt-2"></div>
+			</div>
+			<div class="mb-4">
+				<label class="form-label fw-bold small text-muted">
+					2. Adicionar nome dos jogadores
+				</label>
+				<div class="row g-2 mt-2 mb-4">
+					<div class="col">
+						<button id="btn-add" class="btn btn-secondary w-100 btn-sm">
+							<i class="bi bi-plus-lg"></i>
+						</button>
+					</div>
+					<div class="col">
+						<button id="btn-remove" class="btn btn-danger w-100 btn-sm">
+							<i class="bi bi-dash-lg"></i>
+						</button>
+					</div>
+				</div>
+				<div id="players-container" class="d-grid gap-2"></div>
+			</div>
+			<button id="btn-start" class="btn btn-success w-100 py-3 fw-bold shadow" disabled>
+				INICIAR!
+			</button>
+		</section>
 
-        <section id="screen-game" class="d-none">
-            <div class="d-flex justify-content-between align-items-center mb-3">
-                <button id="btn-quit" class="btn btn-sm btn-outline-danger fw-bolder">
-                    <i class="bi bi-x"></i>
-                    Sair
-                </button>
-                <button id="turn">
-                    Jogador 1
-                </button>
-                <button class="btn btn-sm btn-outline-warning fw-bolder">
-                    <i class="bi bi-clock"></i>
-                    <span id="timer-display">15</span>
-                </button>
-            </div>
+		<section id="screen-game" class="d-none">
+			<div class="d-flex justify-content-between align-items-center mb-3">
+				<button id="btn-quit" class="btn btn-sm btn-outline-danger fw-bolder">
+					<i class="bi bi-x"></i>
+					Sair
+				</button>
+				<button id="turn">
+					Jogador 1
+				</button>
+				<button class="btn btn-sm btn-outline-warning fw-bolder">
+					<i class="bi bi-clock"></i>
+					<span id="timer-display">15</span>
+				</button>
+			</div>
 
 
-            <div class="text-center py-4 mb-3 shadow">
-                <h4 id="question-text" class="fw-bold m-0">Pergunta?</h4>
-            </div>
+			<div class="text-center py-4 mb-3 shadow">
+				<h4 id="question-text" class="fw-bold m-0">Pergunta?</h4>
+			</div>
 
-            <button id="btn-release-timer" class="btn btn-outline-warning w-100 py-2 fw-bold mb-3">
-                <i class="bi bi-stopwatch-fill"></i>
-                VALENDO!
-            </button>
+			<button id="btn-release-timer" class="btn btn-outline-warning w-100 py-2 fw-bold mb-3">
+				<i class="bi bi-stopwatch-fill"></i>
+				VALENDO!
+			</button>
 
-            <div id="options-area" class="d-grid gap-3 blocked-area shadow p-3"></div>
+			<div id="options-area" class="d-grid gap-3 blocked-area shadow p-3"></div>
 
-            <button id="btn-next" class="btn btn-secondary w-100 mt-3 py-3 fw-bold d-none">
-                Próxima
-                <i class="bi bi-arrow-right"></i>
-            </button>
+			<button id="btn-next" class="btn btn-secondary w-100 mt-3 py-3 fw-bold d-none">
+				Próxima
+				<i class="bi bi-arrow-right"></i>
+			</button>
 
-            <div id="feedback-area" class="mt-3"></div>
+			<div id="feedback-area" class="mt-3"></div>
 
-        </section>
+		</section>
 
-        <section id="screen-result" class="d-none text-center mt-5">
-            <i class="bi bi-trophy-fill text-warning display-1"></i>
-            <h1 class="fw-bold mt-3 mb-4">Placar Final</h1>
-            <hr>
-            <div id="winner-alert" class="alert alert-success d-inline-block fw-bold px-4 mb-4"></div>
-            <ul id="final-list" class="list-group text-start mb-4 shadow-sm"></ul>
-            <button id="btn-menu" class="btn btn-outline-secondary w-100">Voltar ao Início</button>
-        </section>
-    </main>
+		<section id="screen-result" class="d-none text-center mt-5">
+			<i class="bi bi-trophy-fill text-warning display-1"></i>
+			<h1 class="fw-bold mt-3 mb-4">Placar Final</h1>
+			<hr>
+			<div id="winner-alert" class="alert alert-success d-inline-block fw-bold px-4 mb-4"></div>
+			<ul id="final-list" class="list-group text-start mb-4 shadow-sm"></ul>
+			<button id="btn-menu" class="btn btn-outline-secondary w-100">Voltar ao Início</button>
+		</section>
+	</main>
 
-    <footer id="footer-score" class="fixed-bottom bg-body-secondary p-2">
-        <div id="mini-scoreboard" class="container py-2"></div>
-    </footer>
+	<footer id="footer-score" class="fixed-bottom bg-body-secondary p-2">
+		<div id="mini-scoreboard" class="container py-2"></div>
+	</footer>
 
-    <audio id="snd-clock" src="./audio/clock.wav" loop></audio>
-    <audio id="snd-success" src="./audio/success.wav"></audio>
-    <audio id="snd-error" src="./audio/error.wav"></audio>
+	<audio id="snd-clock" src="./audio/clock.wav" loop></audio>
+	<audio id="snd-success" src="./audio/success.wav"></audio>
+	<audio id="snd-error" src="./audio/error.wav"></audio>
 
-    <script src="app.js"></script>
+	<script src="app.js"></script>
 </body>
 
 </html>
