--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>OpenQuiz Apresentador</title>
+	<title>OpenQuiz</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
@@ -20,17 +20,19 @@
 	<link rel="manifest" href="./manifest.json">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="default">
-	<meta name="apple-mobile-web-app-title" content="OpenCifras">
+	<meta name="apple-mobile-web-app-title" content="OpenQuiz">
 	<meta name="theme-color" content="#e9ecef"> <!-- .bg-body-secondary (dark = #343a40 light = #e9ecef) -->
 	<link rel="apple-touch-icon" href="maskable_icon_x512.png">
 </head>
 
 <body class="bg-body-tertiary">
 	<header class="fixed-top bg-body-secondary p-2 shadow">
-		<h1 class="fw-bolder">
-			<i class="bi bi-mortarboard"></i>
-			OpenQuiz
-		</h1>
+		<a class="navbar-brand" href="https://github.com/realsigmamusic/OpenQuiz" target="_blank">
+			<h1 class="fw-bolder">
+				<i class="bi bi-mortarboard"></i>
+				OpenQuiz
+			</h1>
+		</a>
 	</header>
 
 	<main class="container py-5 my-5">
