--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="./mortarboard.svg" type="image/svg+xml">
 	<title>OpenQuiz</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -26,8 +27,8 @@
 </head>
 
 <body class="bg-body-tertiary">
-	<header class="fixed-top bg-body-secondary p-2 shadow">
-		<a class="navbar-brand" href="https://github.com/realsigmamusic/OpenQuiz" target="_blank">
+	<header class="fixed-top bg-body-secondary p-2 rounded-bottom-4 shadow">
+		<a class="navbar-brand" href="https://github.com/samuelsantanaoficial/OpenQuiz" target="_blank">
 			<h1 class="fw-bolder">
 				<i class="bi bi-mortarboard"></i>
 				OpenQuiz
@@ -36,7 +37,7 @@
 	</header>
 
 	<main class="container py-5 my-5">
-		<section id="screen-setup" class="p-4 shadow">
+		<section id="screen-setup" class="p-4 rounded shadow">
 			<h1 class="text-center">Configurações do jogo</h1>
 			<hr>
 			<div class="mb-4">
@@ -85,8 +86,8 @@
 			</div>
 
 
-			<div class="text-center py-4 mb-3 shadow">
-				<h4 id="question-text" class="fw-bold m-0">Pergunta?</h4>
+			<div class="text-center py-4 mb-3 rounded shadow">
+				<h4 id="question-text" class="fw-bold m-0 px-2">Pergunta?</h4>
 			</div>
 
 			<button id="btn-release-timer" class="btn btn-outline-warning w-100 py-2 fw-bold mb-3">
@@ -94,7 +95,7 @@
 				VALENDO!
 			</button>
 
-			<div id="options-area" class="d-grid gap-3 blocked-area shadow p-3"></div>
+			<div id="options-area" class="d-grid gap-3 blocked-area p-3 rounded shadow "></div>
 
 			<button id="btn-next" class="btn btn-secondary w-100 mt-3 py-3 fw-bold d-none">
 				Próxima
@@ -115,7 +116,7 @@
 		</section>
 	</main>
 
-	<footer id="footer-score" class="fixed-bottom bg-body-secondary p-2">
+	<footer id="footer-score" class="fixed-bottom bg-body-secondary rounded-top-4 p-2">
 		<div id="mini-scoreboard" class="container py-2"></div>
 	</footer>
 
