feat: audios novos e animação na tela de vencedor

--- a/index.html
+++ b/index.html
@@ -121,10 +121,13 @@
 	</footer>
 
 	<audio id="snd-clock" src="./audio/clock.wav" loop></audio>
-	<audio id="snd-success" src="./audio/success.wav"></audio>
-	<audio id="snd-error" src="./audio/error.wav"></audio>
+	<audio id="snd-success" src="./audio/right_answer.mp3"></audio>
+	<audio id="snd-error" src="./audio/wrong_answer.mp3"></audio>
+	<audio id="snd-complete" src="./audio/lesson_complete.mp3"></audio>
+	<audio id="snd-failed" src="./audio/lesson_failed.mp3"></audio>
 
 	<script src="app.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </body>
 
 </html>
