fix: update audios

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		<div id="mini-scoreboard" class="container py-2"></div>
 	</footer>
 
-	<audio id="snd-clock" src="./audio/clock.wav" loop></audio>
+	<audio id="snd-clock" src="./audio/time_clock.mp3" loop></audio>
 	<audio id="snd-success" src="./audio/right_answer.mp3"></audio>
 	<audio id="snd-error" src="./audio/wrong_answer.mp3"></audio>
 	<audio id="snd-complete" src="./audio/lesson_complete.mp3"></audio>
